require sqlite-vec in tests and smoke-test the native daemon
The vector tests were not merely able to skip — they had been skipping on
every platform, macOS included, since they were written. SqliteMemoryStore
VectorTests guarded each assertion with assumeTrue(isVectorSearchAvailable())
and only ever tried `load_extension('vec0')` by bare name, which never
resolves from Gradle's working directory. Locally that was 5 of 9 tests
silently skipped; nothing reported it, because Gradle prints no skip counts
by default and the workflow uploaded no test report. A green leg said nothing
about whether vector search worked.

That mattered most on the newly enabled Windows leg, where sqlite-vec had
never been exercised at all, but the defect was never Windows-specific.

Three changes, so that green means something:

Tests resolve the extension the way the daemon does — extracting the embedded
native/<os>-<arch>/vec0.* classpath resource — and VecExtension.requireLoaded
fails instead of skipping. PIERIA_ALLOW_MISSING_VEC_EXTENSION=1 downgrades it
to a skip, for offline work on a fresh clone where packaging/native/**/*.
{dylib,so,dll} are git-ignored and therefore absent. CI must never set it.
Reading the classpath resource rather than packaging/native/ also sidesteps a
macOS trap: a vec0.dylib fetched with a browser carries com.apple.quarantine
and dlopen rejects it outright, while Gradle's resource copy drops the
attribute, so the copy that actually ships loads cleanly.

The native binary is now smoke-tested. Until this, nothing ever ran the image
that gets published — the JVM suite only exercises the classpath path, leaving
GraalVM's FFM support, xerial's own native extraction, and load_extension
against an extracted vec0 unverified everywhere. .github/scripts/smoke-native.sh
starts the built daemon and asserts on /pieria-status. It runs before the
packaging steps so a reduced binary cannot be published.

Asserting that required a signal: the daemon degrades to FTS-only withou